--- a/src/app/incident/incident/components/listeincident/consultationreso/consultationreso.component.html
+++ b/src/app/incident/incident/components/listeincident/consultationreso/consultationreso.component.html
@@ -47,7 +47,7 @@
                             <select
                                 class="form-select"
                                 aria-label="Default select example"
-                                formControlName="environment"
+                                formControlName="logiciel"
                             >
                                 <option selected>Choisissez une application</option>
                                 <option
