--- a/src/app/layout-costumer/layout-costumer.component.html
+++ b/src/app/layout-costumer/layout-costumer.component.html
@@ -10,7 +10,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           <form class="d-flex">
-            <button class="btn btn-light mx-2">Déconnexion</button>
+            <button class="btn btn-light mx-2"  type="submit" (click)="logout()">Déconnexion</button>
           </form>
         </div>
       </div>
