--- a/src/app/rex/rex/components/createrex/createrex/createrex.component.html
+++ b/src/app/rex/rex/components/createrex/createrex/createrex.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <button type="button" class="btn btn-success boutonModal mt-4" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap"><i class="bi bi-plus-lg fw-bold"></i> Enregistrer rex</button>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -44,6 +45,24 @@
     </div>
   </div>
 </div>
+
+
+<div class="card-head mt-5 taille">
+
+  <form>
+    <div class="input-group">
+      <!-- <label class="input-group-text">Environnement:</label> -->
+      <input type="text" formControlName="nom" class="form-control" placeholder="recherche un rex">
+      <button class="btn btn-info">
+        <i class="bi bi-search"></i>
+        Search
+      </button>
+    </div>
+
+  </form>
 <h2 class="fw-bold text-center text-primary">Liste des rex</h2>
+</div>
 
 <app-listerex></app-listerex>
+
+</div>
