--- a/src/app/Auth/Login/components/login/login.component.html
+++ b/src/app/Auth/Login/components/login/login.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
           <div class="form-group text-center">
-            <button type="submit" (click)="auth()" class="btn btn-light btn-block mt-4">Sign me in</button>
+            <button type="submit" (click)="auth()" class="btn btn-light btn-block mt-4">Connexion</button>
           </div>
           <!-- Ajoutez ici un lien pour la réinitialisation du mot de passe ou pour créer un nouveau compte si nécessaire -->
         </form>
