--- a/src/app/rex/rex/components/listerex/listerex/listerex.component.html
+++ b/src/app/rex/rex/components/listerex/listerex/listerex.component.html
@@ -37,7 +37,7 @@
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editRex" data-bs-whatever="@getbootstrap" (click)="chargeData(materiel)">Modifier</button>
           <button class="btn btn-success ms-2" (click)="delete(materiel)">Supprimer</button>
       </td>
-      
+
 
 
     </tr>
@@ -46,7 +46,7 @@
 
   </tbody>
 </table>
-<nav aria-label="Page navigation example">
+<!-- <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-end">
     <li class="page-item">
       <a class="page-link" href="#" aria-label="Previous">
@@ -62,7 +62,7 @@
       </a>
     </li>
   </ul>
-</nav>
+</nav> -->
 <div class="modal fade" id="editRex" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
